// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute market-status endpoint should return error when market is not in response 1`] = `
{
  "errorMessage": "Market '5' not found in response. Found: 4, 2",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market-status endpoint should return success with closed market 1`] = `
{
  "data": {
    "result": 1,
    "statusString": "CLOSED",
  },
  "result": 1,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market-status endpoint should return success with open market 1`] = `
{
  "data": {
    "result": 2,
    "statusString": "OPEN",
  },
  "result": 2,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
